* Add white-space:nowrap to pinyin. Fix #139

--- a/sass/han/_hruby.sass
+++ b/sass/han/_hruby.sass
@@ -60,6 +60,7 @@ hruby rb[annotation]
 		text-indent: 0
 		padding: 0 275% 0 225%
 		word-break: normal
+		white-space: nowrap
 
 
 /* ========================================================================== 
