--- a/styles.css
+++ b/styles.css
@@ -7442,6 +7442,7 @@ hruby rb[annotation]:before {
   text-indent: 0;
   padding: 0 275% 0 225%;
   word-break: normal;
+  white-space: nowrap;
 }
 
 /* ==========================================================================
